# aoc

./: .gitignore
2022/java/: Template.java
2022/java/Calories/: MaxCalories.java
2022/java/Directory/: Directory.py  File.py  Main.py  test.py
2022/java/RockPaperScissor/: RPS.java
2022/java/RuckSack/: RuckSack.java
2022/java/Sections/: IDs.java
2022/java/Signal/: signal_1.py  test.py
2022/java/Stacks/: Stacks.java  stacks.py
2023/java/: .gitignore
2023/java/day1/: Trebuchet.java
2023/java/day2/: CubeConundrum.java
2023/java/day3/: GearRatios.java
2023/java/day4/: Boilerplate.java
2024/haskell/: .gitignore  aoc.cabal  scartch
2024/haskell/app/: Arcade.hs  Ceres.hs  Corrupted.hs  Fragmenter.hs  Garden.hs  Guard.hs  Historian.hs  Operator.hs  PracticeD1.hs  Printer.hs  Reports.hs  Resonant.hs  Robots.hs  Splitstone.hs  SumLines.hs  Trailhead.hs  Warehouse.hs
