cabal-version:      3.0
name:               aoc
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: 2024 Advent of Code in Haskell

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable historian
    main-is:          Historian.hs
    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.20.0
    hs-source-dirs:   app
    default-language: Haskell2010

executable reports
    main-is:          Reports.hs
    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.20.0
    hs-source-dirs:   app
    default-language: Haskell2010

executable corrupt
    main-is:          Corrupted.hs
    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
        base ^>=4.20.0,
        strings ^>=1.1
    hs-source-dirs:   app
    default-language: Haskell2010