cabal-version:      3.0
name:               aoc
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: 2024 Advent of Code in Haskell

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable historian
    main-is:          Historian.hs
    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.20.0
    hs-source-dirs:   app
    default-language: Haskell2010

executable reports
    main-is:          Reports.hs
    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.20.0
    hs-source-dirs:   app
    default-language: Haskell2010

executable corrupt
    main-is:          Corrupted.hs
    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
        base ^>=4.20.0,
        strings ^>=1.1
    hs-source-dirs:   app
    default-language: Haskell2010

executable ceres
    main-is:          Ceres.hs
    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
        base ^>=4.20.0,
        strings ^>=1.1
    hs-source-dirs:   app
    default-language: Haskell2010

executable printer
    main-is:          Printer.hs
    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
        base ^>=4.20.0,
        strings ^>=1.1,
        split ^>=0.2.5
    hs-source-dirs:   app
    default-language: Haskell2010

executable guard
    main-is:          Guard.hs
    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
        base ^>=4.20.0,
        strings ^>=1.1,

    hs-source-dirs:   app
    default-language: Haskell2010

executable operator
    main-is:          Operator.hs
    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
        base ^>=4.20.0,
        strings ^>=1.1,
        split ^>=0.2.5

    hs-source-dirs:   app
    default-language: Haskell2010

executable resonant
    main-is:          Resonant.hs
    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
        base ^>=4.20.0,
        strings ^>=1.1,
        containers ^>=0.7

    hs-source-dirs:   app
    default-language: Haskell2010

executable fragmenter
    main-is:          Fragmenter.hs
    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
        base ^>=4.20.0,
        strings ^>=1.1,
        split ^>=0.2.5,
        vector ^>=0.13.2.0

    hs-source-dirs:   app
    default-language: Haskell2010

executable trailhead
    main-is:          Trailhead.hs
    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
        base ^>=4.20.0,
        strings ^>=1.1,
        containers ^>=0.7

    hs-source-dirs:   app
    default-language: Haskell2010

executable splitstone
    main-is:          Splitstone.hs
    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
        base ^>=4.20.0,
        strings ^>=1.1,
        MemoTrie ^>= 0.6.11

    hs-source-dirs:   app
    default-language: Haskell2010

executable garden
    main-is:          Garden.hs
    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
        base ^>=4.20.0,
        strings ^>=1.1,
        containers ^>=0.7,
        vector ^>=0.13.2.0,

    hs-source-dirs:   app
    default-language: Haskell2010
